--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.vitormp</groupId>
 	<artifactId>maven-release</artifactId>
-	<version>0.1.2</version>
+	<version>0.1.3-SNAPSHOT</version>
 	<packaging>war</packaging>
 
 	<name>maven-release Maven Webapp</name>
@@ -15,7 +15,7 @@
 		<connection>scm:git:https://github.com/addy2908/devops-project.git</connection>
 		<developerConnection>scm:git:https://github.com/addy2908/devops-project.git</developerConnection>
 		
-	  <tag>maven-release-0.1.2</tag>
+	  <tag>maven-release-0.1.1</tag>
   </scm>
 
 	<distributionManagement>
