--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
 	<name>maven-release Maven Webapp</name>
 
 	<scm>
-		<url>https://github.com/addy2908/devops-project.git</url>
-		<connection>scm:git:https://github.com/addy2908/devops-project.git</connection>
-		<developerConnection>scm:git:https://github.com/addy2908/devops-project.git</developerConnection>
+		<url>git@github.com:addy2908/devops-project.git</url>
+		<connection>scm:git:git@github.com:addy2908/devops-project.git</connection>
+		<developerConnection>scm:git:git@github.com:addy2908/devops-project.git</developerConnection>
 		
 	  <tag>maven-release-0.1.1</tag>
   </scm>
