--- a/pom.xml
+++ b/pom.xml
@@ -23,14 +23,14 @@
 		<repository>
 			<id>nexusreleases</id>
 			<name>new-maven-release</name>
-			<url>http://localhost:8081/repository/maven-releases/</url>
+			<url>http://192.168.247.135:8081/repository/maven-releases/</url>
 		</repository>
 
 		<!-- Publish snapshots here -->
 		<snapshotRepository>
 			<id>nexussnapshots</id>
 			<name>new-maven-snapshot</name>
-			<url>http://localhost:8081/repository/new-maven-snapshot/</url>
+			<url>http://192.168.247.135:8081/repository/new-maven-snapshot/</url>
 		</snapshotRepository>
 	</distributionManagement>
 
