--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.vitormp</groupId>
 	<artifactId>maven-release</artifactId>
-	<version>0.1.8-SNAPSHOT</version>
+	<version>0.1.8</version>
 	<packaging>war</packaging>
 
 	<name>maven-release Maven Webapp</name>
@@ -15,7 +15,7 @@
 		<connection>scm:git:git@github.com:addy2908/devops-project.git</connection>
 		<developerConnection>scm:git:git@github.com:addy2908/devops-project.git</developerConnection>
 		
-	  <tag>HEAD</tag>
+	  <tag>maven-release-0.1.8</tag>
   </scm>
 
 	<distributionManagement>
